Some minor issues fixed